[tool.poetry]
name = "disclost-service"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
httpx = {extras = ["http2"], version = "^0.27.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
